--- a/css/post-2096.css
+++ b/css/post-2096.css
@@ -833,7 +833,7 @@ body.rtl .elementor-2096 .elementor-element.elementor-element-805016c {
 }
 
 .elementor-2096 .elementor-element.elementor-element-e05e74d .number-wrap span {
-    color: var(--e-global-color-tombuild_accent);
+    color: #ED0C07;
     font-size: 82px;
     font-weight: 500;
     line-height: 60px
